# Gareth-John-MyPy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  analyze-results.sh  bad_func.py  class_test.py  closure_test.py  closure_test2.py  example-code.py  example-code2.py  func.py  htest1.py  htest2.py  htest3.py  htest4.py  inheritance.py  main.cpp  main_overload_test.py  overload.py  overload2.py  pycfile.cpp  pycfile.hpp  recursive.py  run-benchmarks.py  run-euler-problems.sh  setup-build-dir.sh  setup-submodules.sh  slice_test.py  super_test2.py  test.py
benchmarks/: README.md
benchmarks/real/: spectral_norm.py-disabled
benchmarks/synths/: arithmetic.py  functions.py  loop-enumerate-list.py  loop-generator.py  loop-range.py  loop-while.py  recursion.py
lib/: base64.cpp  base64.hpp  debug.hpp  oplist.cpp  oplist.hpp  process.hpp  pygc.hpp  pygc2.hpp  variant.hpp
notes/: READING-LIST.md  TODO.md
python_test_scripts/: call_overload.py  class_test2.py  closure_test.py  closure_test3.py  closure_test4.py  comp_py.py  example-code.py  example-code3.py  example-generator.py  gc.py  slice_test.py  super_test.py
python_test_scripts/benchmark/: functions.py
pytools/: compile.py  dump_ops.py  profiling-data-analyser-v2.py  profiling-data-analyser.py  unmarshal.py
src/: code.cpp  interpreter.hpp  jmp_table.hpp  main.cpp  optflags.hpp  pyallocator.cpp  pyallocator.hpp  pycode.cpp  pycode.hpp  pyerror.hpp  pyframe.cpp  pyframe.hpp  pygc.hpp  pyinterpreter.cpp  pyinterpreter.hpp  pyophelpers.hpp  pyvalue.cpp  pyvalue.hpp  pyvalue_helpers.cpp  pyvalue_helpers.hpp  pyvalue_types.hpp  vm_main.cpp
src/builtins/: builtins.cpp  builtins.hpp  builtins_cell_class.cpp  builtins_helpers.hpp  builtins_helpers_old.hpp  builtins_list.cpp  builtins_slice.cpp
test/: main.cpp  my_other_tests.cpp  specnorm.py  test_arithmetic.cpp  test_builtins.cpp  test_classes.cpp  test_closures.cpp  test_control_structures.cpp  test_functions.cpp  test_garbage_collector.cpp  test_list_map_set.cpp
test/benchmark_game/: binary_tree.py  spectral_norm.py
test/euler_problems/: problem01.py  problem02.py  problem03.py  problem06.py  problem07.py  problem09.py  problem10.py  problem21.py  problem27.py  problem30.py-disabled  problem31.py  problem33.py  problem34.py  problem37.py
test/include/: test_helpers.cpp  test_helpers.hpp
test_cases/: fetcher.py
